<resources>
    <string name="app_name">KCG Scanner</string>
    <string name="decode_time">Time:</string>
    <string name="decode_symbology">Symbology:</string>
    <string name="decode_length">Length:</string>
    <string name="decode_data">Barcode:</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">Version</string>
    <string name="keyboard_output">Keyboard Output</string>
    <string name="intent_output">Intent Output</string>
    <string name="continuous_scan">Continuous Scan</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="logo">Logo</string>
    <string name="password">Enter Password</string>
    <string name="username">Enter Username</string>
    <string name="branch">Enter Branch</string>
    <string name="login">Login</string>
    <string name="barcode_list">Barcode List</string>
    <string name="barcode_result">Barcode Result</string>
    <string name="artikels">Artikel :</string>
    <string name="color">Color :</string>
    <string name="size">Size :</string>
    <string name="enter_brand">Enter Brand</string>
    <string name="qty">Qty</string>
    <string name="manual">Manual</string>
    <string name="artikel">Artikel</string>
</resources>
